Salesforce/src/objects/Place__c.object
<CustomObject>
    <fields>
        <fullName>Address1__c</fullName>
        <label>Address1</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address2__c</fullName>
        <label>Address2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <picklist>
            <picklistValues>
                <fullName>San Francisco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alameda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Atherton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burlingame</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cupertino</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daly City</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dublin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Menlo Park</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mountain View</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oakland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Palo Alto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>San Bruno</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>San Jose</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>San Mateo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sunnyvale</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Distance_Tolerance__c</fullName>
        <description>Amount of tolerance from the place centroid is a user allowed to check-in.  This value is in METERS.</description>
        <label>Distance Tolerance (meters)</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <required>true</required>
        <scale>5</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Place</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Address1__c</columns>
        <columns>Distance_Tolerance__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Places Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Places</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>